--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - base/
+  - base/wordpress-ui-deployment.yaml
+  - base/wordpress-ui-svc.yaml
