--- a/wordpress/base/wordpress-ui-ingress.yaml
+++ b/wordpress/base/wordpress-ui-ingress.yaml
@@ -1,22 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: argocd-ingress
-  namespace: argocd
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    alb.ingress.kubernetes.io/ssl-passthrough: "true"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+  name: wordpress-ui-ingress
 spec:
-  rules:
-  - http:
-      paths:
-      - pathType: Prefix
-        path: /
-        backend:
-          service:
-            name: wordpress-ui
-            port:
-              number: 8082
-    host: argo.org.local
+  defaultBackend:
+    service:
+      name: wordpress-ui
+      port:
+        number: 80
