--- a/wordpress/base/wordpress-ui-ingress.yaml
+++ b/wordpress/base/wordpress-ui-ingress.yaml
@@ -2,11 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wordpress-ui-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
 spec:
-  defaultBackend:
-    service:
-      name: wordpress-ui
-      port:
-        number: 80
+  rules:
+  - host: wordpress-ui.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: wordpress-ui
+            port:
+              number: 80
+  ingressClassName: nginx
