--- a/wordpress/base/wordpress-ui-ingress.yaml
+++ b/wordpress/base/wordpress-ui-ingress.yaml
@@ -1,17 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: wordpress-ui-ingress
+  name: wordpress-ui-localhost
 spec:
-  rules:
-  - host: wordpress-ui.local
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: wordpress-ui
-            port:
-              number: 80
   ingressClassName: nginx
+  rules:
+    - host: test.local
+      http:
+        paths:
+          - backend:
+              service:
+                name: wordpress-ui
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
