--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -7,4 +7,6 @@ kind: Kustomization
 resources:
   - base/wordpress-ui-deployment.yaml
   - base/wordpress-ui-svc.yaml
+  - base/wordpress-db-deployment.yaml
+  - base/wordpress-db-svc.yaml
   - base/wordpress-ui-ingress.yaml
