--- a/wordpress/base/wordpress-ui-deployment.yaml
+++ b/wordpress/base/wordpress-ui-deployment.yaml
@@ -14,7 +14,16 @@ spec:
         app: wordpress-ui
     spec:
       containers:
-      - image: wordpress:6
-        name: wordpress-ui
-        ports:
-        - containerPort: 80
+        - image: wordpress:6
+          name: wordpress-ui
+          ports:
+            - containerPort: 80
+          env:
+            - name: WORDPRESS_DB_HOST
+              value: wordpress-db
+            - name: WORDPRESS_DB_USER
+              value: wordpress-usr
+            - name: WORDPRESS_DB_PASSWORD
+              value: wordpress-pwd
+            - name: WORDPRESS_DB_NAME
+              value: wordpress
