--- a/wordpress/base/wordpress-phpmyadmin-ingress.yaml
+++ b/wordpress/base/wordpress-phpmyadmin-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: phpmyadmin.test.local
+    - host: test.local
       http:
         paths:
           - backend:
