--- a/wordpress/base/wordpress-phpmyadmin-ingress.yaml
+++ b/wordpress/base/wordpress-phpmyadmin-ingress.yaml
@@ -5,13 +5,13 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: test.local
+    - host: phpmyadmin.test.local
       http:
         paths:
           - backend:
               service:
                 name: wordpress-phpmyadmin
                 port:
-                  number: 81
+                  number: 80
             path: /
             pathType: Prefix
