--- a/wordpress/base/db-svc.yaml
+++ b/wordpress/base/db-svc.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-db
+  name: db
   labels:
-    name: wordpress-db
+    name: db
 spec:
   ports:
     # the port that this service should serve on
   - port: 3306
     targetPort: 3306
   selector:
-    name: wordpress-db
+    name: db
