--- a/wordpress/base/phpmyadmin-svc.yaml
+++ b/wordpress/base/phpmyadmin-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-ui
+  name: phpmyadmin
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: wordpress-ui
+    app: phpmyadmin
