--- a/wordpress/base/ui-deployment.yaml
+++ b/wordpress/base/ui-deployment.yaml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-ui
+  name: ui
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: wordpress-ui
+      app: ui
   template:
     metadata:
       labels:
-        app: wordpress-ui
+        app: ui
     spec:
       containers:
         - image: wordpress:6
-          name: wordpress-ui
+          name: ui
           ports:
             - containerPort: 80
           env:
             - name: WORDPRESS_DB_HOST
-              value: wordpress-db
+              value: db
             - name: WORDPRESS_DB_USER
-              value: wordpress-usr
+              value: usr
             - name: WORDPRESS_DB_PASSWORD
-              value: wordpress-pwd
+              value: pwd
             - name: WORDPRESS_DB_NAME
               value: wordpress
