--- a/wordpress/base/ui-svc.yaml
+++ b/wordpress/base/ui-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-phpmyadmin
+  name: ui
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: wordpress-phpmyadmin
+    app: ui
