--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -5,11 +5,11 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - base/wordpress-ui-deployment.yaml
-  - base/wordpress-ui-ingress.yaml
-  - base/wordpress-ui-svc.yaml
-  - base/wordpress-phpmyadmin-deployment.yaml
-  - base/wordpress-phpmyadmin-ingress.yaml
-  - base/wordpress-phpmyadmin-svc.yaml
-  - base/wordpress-db-deployment.yaml
-  - base/wordpress-db-svc.yaml
+  - base/ui-deployment.yaml
+  - base/ui-ingress.yaml
+  - base/ui-svc.yaml
+  - base/phpmyadmin-deployment.yaml
+  - base/phpmyadmin-ingress.yaml
+  - base/phpmyadmin-svc.yaml
+  - base/db-deployment.yaml
+  - base/db-svc.yaml
