Revert "Rename to remove wordpress-"
This reverts commit 3438f8130c1fde2865fdc60352a03176c364b413.

--- a/wordpress/base/wordpress-db-deployment.yaml
+++ b/wordpress/base/wordpress-db-deployment.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: db
+  name: wordpress-db
   labels:
-    name: db
+    name: wordpress-db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: db
+      name: wordpress-db
   template:
     metadata:
       labels:
-        name: db
+        name: wordpress-db
     spec:
       containers:
-      - name: db
+      - name: wordpress-db
         image: mysql:latest
         env:
           - name: MYSQL_ROOT_PASSWORD
