--- a/wordpress/base/wordpress-phpmyadmin-svc.yaml
+++ b/wordpress/base/wordpress-phpmyadmin-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ui
+  name: wordpress-phpmyadmin
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: ui
+    app: wordpress-phpmyadmin
