--- a/wordpress/base/wordpress-ui-deployment.yaml
+++ b/wordpress/base/wordpress-ui-deployment.yaml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ui
+  name: wordpress-ui
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: ui
+      app: wordpress-ui
   template:
     metadata:
       labels:
-        app: ui
+        app: wordpress-ui
     spec:
       containers:
         - image: wordpress:6
-          name: ui
+          name: wordpress-ui
           ports:
             - containerPort: 80
           env:
             - name: WORDPRESS_DB_HOST
-              value: db
+              value: wordpress-db
             - name: WORDPRESS_DB_USER
-              value: usr
+              value: wordpress-usr
             - name: WORDPRESS_DB_PASSWORD
-              value: pwd
+              value: wordpress-pwd
             - name: WORDPRESS_DB_NAME
               value: wordpress
