--- a/wordpress/base/wordpress-ui-ingress.yaml
+++ b/wordpress/base/wordpress-ui-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ui-localhost
+  name: wordpress-ui-localhost
 spec:
   ingressClassName: nginx
   rules:
@@ -10,7 +10,7 @@ spec:
         paths:
           - backend:
               service:
-                name: ui
+                name: wordpress-ui
                 port:
                   number: 80
             path: /
