--- a/wordpress/base/wordpress-ui-svc.yaml
+++ b/wordpress/base/wordpress-ui-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: phpmyadmin
+  name: wordpress-ui
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: phpmyadmin
+    app: wordpress-ui
