--- a/redis/base/redis-svc.yaml
+++ b/redis/base/redis-svc.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-db
+  name: redis
   labels:
-    name: redis-db
+    name: redis
 spec:
   ports:
     # the port that this service should serve on
   - port: 6379
     targetPort: 6379
   selector:
-    name: redis-db
+    name: redis
