Testing commander-2-svc

--- a/redis/base/commander-deployment.yaml
+++ b/redis/base/commander-deployment.yaml
@@ -20,4 +20,4 @@ spec:
             - containerPort: 8081
           env:
             - name: REDIS_HOSTS
-              value: redis-db
+              value: redis
