--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -5,8 +5,7 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - base/wordpress-ui-deployment.yaml
-  - base/wordpress-ui-svc.yaml
+  - base/wordpress-ui/
   - base/wordpress-phpmyadmin-deployment.yaml
   - base/wordpress-phpmyadmin-svc.yaml
   - base/wordpress-db-deployment.yaml
