--- a/wordpress/base/db/kustomization.yaml
+++ b/wordpress/base/db/kustomization.yaml
@@ -1,8 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+
 #########################
 ## resources
 #########################
 resources:
-  - overlays/local/
+  - deployment.yaml
+  - svc.yaml
+images:
+  ## echo-api Image
+  - name: bitnami/mysql
+    newTag: 5.7
