--- a/wordpress/base/phpmyadmin/kustomization.yaml
+++ b/wordpress/base/phpmyadmin/kustomization.yaml
@@ -6,5 +6,9 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - wordpress-ui-deployment.yaml
-  - wordpress-ui-svc.yaml
+  - deployment.yaml
+  - svc.yaml
+images:
+  ## echo-api Image
+  - name: phpmyadmin
+    newTag: latest
