Refactoring to use overlays - 2

--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -11,7 +11,9 @@ namespace: tn-msp-echo-ci-auto
 ## resources
 #########################
 resources:
-  - ../../base/
+  - ../../base/db/
+  - ../../base/ui/
+  - ../../base/phpmyadmin/
 
 
 #########################
