--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -5,4 +5,6 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - overlays/local/
+  - base/db/
+  - base/ui/
+  - base/phpmyadmin/
