--- a/wordpress/base/db/kustomization.yaml
+++ b/wordpress/base/db/kustomization.yaml
@@ -8,7 +8,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - svc.yaml
-images:
-  ## echo-api Image
-  - name: bitnami/mysql
-    newTag: 5.7
+#images:
+#  ## echo-api Image
+#  - name: bitnami/mysql
+#    newTag: 5.7
