Refactoring to use overlays - 7

--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -6,7 +6,6 @@ kind: Kustomization
 #########################
 resources:
   - base/db/
-  - base/ui/deployment.yaml
-  - base/ui/svc.yaml
+  - base/ui/
   - base/phpmyadmin/svc.yaml
   - base/phpmyadmin/deployment.yaml
