Refactoring to use overlays - 10

--- a/wordpress/base/db/kustomization.yaml
+++ b/wordpress/base/db/kustomization.yaml
@@ -8,7 +8,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - svc.yaml
-#images:
+images:
 #  ## echo-api Image
-#  - name: bitnami/mysql
-#    newTag: 5.7
+  - name: bitnami/mysql
+    newTag: '5.7'
