Refactoring to use overlays - 12

--- a/wordpress/base/ui/kustomization.yaml
+++ b/wordpress/base/ui/kustomization.yaml
@@ -10,5 +10,6 @@ resources:
   - svc.yaml
 images:
   ## echo-api Image
-  - name: wordpress
+  - name: ui
+    newName: wordpress
     newTag: '6.2.1'
