--- a/wordpress/base/ui/kustomization.yaml
+++ b/wordpress/base/ui/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   - svc.yaml
 images:
   ## echo-api Image
-  - name: ui
+  - name: wordpress-ui
     newName: wordpress
     newTag: '6.2.1'
