Adding root-app.yaml - 2

--- a/apps2/wordpress.yaml
+++ b/apps2/wordpress.yaml
@@ -17,3 +17,8 @@ spec:
   syncPolicy:
     automated:
       prune: true
+      selfHeal: true
+    syncOptions:
+      - ApplyOutOfSyncOnly=true
+      - Validate=true
+      - CreateNamespace=true
