Adding root-app.yaml - 8

--- a/wordpress/overlays/local/ui/kustomization.yaml
+++ b/wordpress/overlays/local/ui/kustomization.yaml
@@ -5,10 +5,10 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - ui/
-  - ../../base/ui/
-  - ../../base/phpmyadmin/
+  - ../../../base/ui/
 
+#patchesStrategicMerge:
+#  - patches/deployment-env.yaml
 
 #########################
 ## Image Tags
