--- a/wordpress/base/ui/deployment.yaml
+++ b/wordpress/base/ui/deployment.yaml
@@ -18,12 +18,4 @@ spec:
           name: wordpress-ui
           ports:
             - containerPort: 80
-          env:
-            - name: WORDPRESS_DB_HOST
-              value: wordpress-db
-            - name: WORDPRESS_DB_USER
-              value: wordpress-usr
-            - name: WORDPRESS_DB_PASSWORD
-              value: wordpress-pwd
-            - name: WORDPRESS_DB_NAME
-              value: wordpress
+          env: []
