Adding root-app.yaml - 9

--- a/wordpress/overlays/local/ui/patches/deployment-env.yaml
+++ b/wordpress/overlays/local/ui/patches/deployment-env.yaml
@@ -19,3 +19,5 @@ spec:
               value: wordpress-pwd
             - name: WORDPRESS_DB_NAME
               value: wordpress
+            - name: FOO
+              value: bar
