--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -5,8 +5,8 @@ kind: Kustomization
 ## resources
 #########################
 resources:
+  - ../../base/db/
   - ui/
-  - ../../base/ui/
   - ../../base/phpmyadmin/
 
 
