--- a/wordpress/kustomization.yaml
+++ b/wordpress/kustomization.yaml
@@ -5,6 +5,4 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - base/db/
-  - base/ui/
-  - base/phpmyadmin/
+  - local/
