--- a/wordpress/base/ui/deployment.yaml
+++ b/wordpress/base/ui/deployment.yaml
@@ -18,4 +18,6 @@ spec:
           name: wordpress-ui
           ports:
             - containerPort: 80
-          env: []
+          env:
+            - name: FOO
+              value: bar
