--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -10,10 +10,6 @@ resources:
   - ../../base/phpmyadmin/
 
 configMapGenerator:
-  - name: ops-ingress-properties2
+  - name: ops-ingress-properties
     envs: [environment.properties]
-
-vars:
-  - name: FOO
-    objref: { kind: ConfigMap, name: ops-ingress-properties2, apiVersion: v1 }
-    fieldref: { fieldpath: data.FOO }
+    behavior: replace # <======= critical
