Adding root-app.yaml - 21

--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
 configMapGenerator:
   - name: ops-ingress-properties
     envs: [environment.properties]
-    behavior: replace # <======= critical
+    behavior: replace
