Adding root-app.yaml - 22

--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -13,3 +13,7 @@ configMapGenerator:
   - name: ops-ingress-properties
     envs: [environment.properties]
     behavior: replace
+vars:
+  - name: BAT
+    objref: { kind: ConfigMap, name: ops-ingress-properties, apiVersion: v1 }
+    fieldref: { fieldpath: data.BAT }
