Adding root-app.yaml - 23

--- a/wordpress/overlays/local/ui/patches/deployment-env.yaml
+++ b/wordpress/overlays/local/ui/patches/deployment-env.yaml
@@ -21,3 +21,5 @@ spec:
               value: wordpress
             - name: FOO
               value: bar
+            - name: BAT
+              value: $(BAT)
