Adding root-app.yaml - 25

--- a/wordpress/overlays/local/ui/patches/deployment-env.yaml
+++ b/wordpress/overlays/local/ui/patches/deployment-env.yaml
@@ -23,3 +23,5 @@ spec:
               value: bar
             - name: BAT
               value: $(BAT)
+            - name: TEST3
+              value: $(FOO)-$(BAT)-asdf
