--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -5,10 +5,10 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - ../../base/db/
-  - ui/
-  - ../../base/phpmyadmin/
-  - ../../base/nginx/
+#  - ../../base/db/
+#  - ui/
+#  - ../../base/phpmyadmin/
+#  - ../../base/nginx/
   - ../../base/_global/
 
 configMapGenerator:
