--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-#  - ../../base/db/
+  - ../../base/db/
 #  - ui/
 #  - ../../base/phpmyadmin/
 #  - ../../base/nginx/
