--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -6,9 +6,9 @@ kind: Kustomization
 #########################
 resources:
   - ../../base/db/
-#  - ui/
-#  - ../../base/phpmyadmin/
-#  - ../../base/nginx/
+  - ui/
+  - ../../base/phpmyadmin/
+  - ../../base/nginx/
   - ../../base/_global/
 
 configMapGenerator:
