--- a/wordpress/overlays/local/ui/kustomization.yaml
+++ b/wordpress/overlays/local/ui/kustomization.yaml
@@ -7,8 +7,8 @@ kind: Kustomization
 resources:
   - ../../../base/ui/
 
-patchesStrategicMerge:
-  - patches/deployment-env.yaml
+patches:
+  - path: patches/deployment-env.yaml
 
 #########################
 ## Image Tags
