--- a/wordpress/base/ui/ingress.yaml
+++ b/wordpress/base/ui/ingress.yaml
@@ -1,19 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
+  name: ui-ingress
   annotations:
     external-dns.alpha.kubernetes.io/ingress-hostname-source: "defined-hosts-only"
 spec:
   ingressClassName: nginx-internal
   rules:
-  - host: nginx.nowhere.com
+  - host: ui.nowhere.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: nginx-svc
+            name: wordpress-ui
             port:
               number: 80
