--- a/wordpress/base/ui/kustomization.yaml
+++ b/wordpress/base/ui/kustomization.yaml
@@ -8,6 +8,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - svc.yaml
+  - ingress.yaml
 images:
   ## echo-api Image
   - name: wordpress-ui-img
