--- a/wordpress/overlays/local/nginx/patch-ingress.yaml
+++ b/wordpress/overlays/local/nginx/patch-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: msp-echo-web-ingress
+  name: nginx-ingress
 spec:
   rules:
   - host: bob.nowhere.com
