--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -21,6 +21,7 @@ configMapGenerator:
       - FOO=foo
       - BAR=bar$(foo)
       - BAT=tab
+      - UI_URL=foo.ui.nowhere.com
 vars:
   - name: BAT
     objref: { kind: ConfigMap, name: ops-ingress-properties, apiVersion: v1 }
