--- a/wordpress/base/_global/kustomization.yaml
+++ b/wordpress/base/_global/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - dctest1.yaml
+
 configMapGenerator:
   - name: ops-ingress-properties
     literals:
