--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -14,29 +14,33 @@ resources:
 #patches:
 #  - path: nginx/patch-ingress.yaml
 #
-#configMapGenerator:
-#  - name: ops-ingress-properties
-#    behavior: replace
-#    literals:
-#      - FOO=foo
-#      - BAR=bar$(foo)
-#      - BAT=tab
-#      - UI_URL=foo.ui.nowhere.com
-#replacements:
-#  - source:
-#      kind: ConfigMap
-#      name: ops-ingress-properties
-#      fieldPath: data.UI_URL
-#      version: v1
-#    targets:
-#     - select:
-#        kind: Ingress
-#        name: ui-ingress
-#       fieldPaths:
-#        - spec.rules.[host=ui.nowhere.com].host
-#
-#
-#vars:
-#  - name: BAT
-#    objref: { kind: ConfigMap, name: ops-ingress-properties, apiVersion: v1 }
-#    fieldref: { fieldpath: data.BAT }
+configMapGenerator:
+  - name: ops-ingress-properties
+    behavior: replace
+    literals:
+      - FOO=foo
+      - BAR=bar$(foo)
+      - BAT=tab
+      - UI_URL=foo.ui.nowhere.com
+  - name: dctest1
+    behavior: replace
+    literals:
+      - A1=A2
+replacements:
+  - source:
+      kind: ConfigMap
+      name: ops-ingress-properties
+      fieldPath: data.UI_URL
+      version: v1
+    targets:
+     - select:
+        kind: Ingress
+        name: ui-ingress
+       fieldPaths:
+        - spec.rules.[host=ui.nowhere.com].host
+
+
+vars:
+  - name: BAT
+    objref: { kind: ConfigMap, name: ops-ingress-properties, apiVersion: v1 }
+    fieldref: { fieldpath: data.BAT }
