--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-#  - ../../base/db/
+  - ../../base/db/
 #  - ui/
-#  - ../../base/phpmyadmin/
+  - ../../base/phpmyadmin/
 #  - ../../base/nginx/
   - ../../base/_global/
 
