Testing DB restart - 2

--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -30,5 +30,11 @@ spec:
         ports:
         - name: mysql
           containerPort: 3306
+        livenessProbe:
+          exec:
+            # Check we can execute queries over TCP (skip-networking is off).
+            command: [ "cat", "/opt/bitnami/mysql/tmp/mysqld.pid" ]
+          initialDelaySeconds: 180
+          periodSeconds: 60
       nodeSelector:
         beta.kubernetes.io/os: linux
