--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -32,7 +32,8 @@ spec:
           containerPort: 3306
         livenessProbe:
           exec:
-            # Check we can execute queries over TCP (skip-networking is off).
-            command: [ "cat", "/opt/bitnami/mysql/tmp/mysqld.pid" ]
+            command:
+              - "cat"
+              - "/opt/bitnami/mysql/tmp/mysqld2.pid"
       nodeSelector:
         beta.kubernetes.io/os: linux
