--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -6,6 +6,7 @@ kind: Kustomization
 #########################
 resources:
   - ../../base/db/
+  - ../../base/liveliness-test/
 #  - ui/
   - ../../base/phpmyadmin/
 #  - ../../base/nginx/
