--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -35,6 +35,12 @@ spec:
             command:
               - "cat"
               - "/opt/bitnami/mysql/tmp/mysqld2.pid"
-          initialDelaySeconds: 120
+        startupProbe:
+          exec:
+            command:
+              - "cat"
+              - "/opt/bitnami/mysql/tmp/mysqld.pid"
+          failureThreshold: 30
+          periodSeconds: 10
       nodeSelector:
         beta.kubernetes.io/os: linux
