--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -33,8 +33,8 @@ spec:
         livenessProbe:
           exec:
             command:
-              - "cat"
-              - "/opt/bitnami/mysql/tmp/mysqld2.pid"
+              - "exit"
+              - "$(test $(date +%M) -eq 01 && echo 1 || echo 0)"
         startupProbe:
           exec:
             command:
