--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -33,6 +33,8 @@ spec:
         livenessProbe:
           exec:
             command:
+              - bash
+              - -c
               - "test  $(($(date +%M)%10)) -eq 0 && exit 1 || exit 0"
           failureThreshold: 1
         startupProbe:
