--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             command:
               - /bin/bash
               - -c
-              - "test $(($(date +%M)%10)) -eq 0 && cat /var/null || cat /opt/bitnami/mysql/tmp/mysqld.pid"
+              - "test $(($(date +%M)%10)) -eq 0 && exit 1 || exit 0"
           failureThreshold: 1
         startupProbe:
           exec:
