--- a/wordpress/base/db/deployment.yaml
+++ b/wordpress/base/db/deployment.yaml
@@ -37,13 +37,7 @@ spec:
               - -c
               - "test $(($(date +%M)%10)) -eq 0 && exit 1 || exit 0"
           failureThreshold: 1
+          initialDelaySeconds: 30
           terminationGracePeriodSeconds: 1
-        startupProbe:
-          exec:
-            command:
-              - "cat"
-              - "/opt/bitnami/mysql/tmp/mysqld.pid"
-          failureThreshold: 30
-          periodSeconds: 10
       nodeSelector:
         beta.kubernetes.io/os: linux
