--- a/wordpress/base/ui/deployment.yaml
+++ b/wordpress/base/ui/deployment.yaml
@@ -23,3 +23,8 @@ spec:
               value: $(FOO)
             - name: BAR
               value: $(BAR)
+          livenessProbe:
+            httpGet:
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
