--- a/wordpress/base/ui/deployment.yaml
+++ b/wordpress/base/ui/deployment.yaml
@@ -28,12 +28,5 @@ spec:
               port: 80
             initialDelaySeconds: 5
             periodSeconds: 5
-        - image: nginx:latest
-          name: nginx
-          ports:
-            - containerPort: 81
-          livenessProbe:
-            httpGet:
-              port: 80
-            initialDelaySeconds: 5
-            periodSeconds: 5
+        - image: hello-world:latest
+          name: hello-world
