--- a/wordpress/base/nginx/deployment.yaml
+++ b/wordpress/base/nginx/deployment.yaml
@@ -24,7 +24,6 @@ spec:
               value: $(BAR)
           resources:
             limits:
-              memory: 2G
+              cpu: 500m
             requests:
-              cpu: "250m"
-              memory: 64M
+              cpu: 200m
