--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ../../base/phpmyadmin/
   - ../../base/nginx/
   - ../../base/_global/
+  - ../../base/scaling-test/
 
 #patches:
 #  - path: nginx/patch-ingress.yaml
