--- a/wordpress/overlays/local/kustomization.yaml
+++ b/wordpress/overlays/local/kustomization.yaml
@@ -5,13 +5,13 @@ kind: Kustomization
 ## resources
 #########################
 resources:
-  - ../../base/db/
-  - ../../base/liveliness-test/
-  - ui/
-  - ../../base/phpmyadmin/
+#  - ../../base/db/
+#  - ../../base/liveliness-test/
+#  - ui/
+#  - ../../base/phpmyadmin/
   - ../../base/nginx/
   - ../../base/_global/
-  - ../../base/scaling-test/
+#  - ../../base/scaling-test/
 
 #patches:
 #  - path: nginx/patch-ingress.yaml
