--- a/wordpress/base/nginx/kustomization.yaml
+++ b/wordpress/base/nginx/kustomization.yaml
@@ -9,9 +9,9 @@ resources:
   - deployment.yaml
   - svc.yaml
   - ingress.yaml
-  - scaler.yaml
+#  - scaler.yaml
 images:
   ## echo-api Image
-  - name: nginx
+  - name: nginx-img
     newName: nginx
     newTag: '1.25'
