--- a/wordpress/base/nginx/deployment.yaml
+++ b/wordpress/base/nginx/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         run: nginx
     spec:
       containers:
-        - image: nginx:1.25-alpine
+        - image: nginx-img
           name: nginx
           ports:
             - containerPort: 80
